fixing chatbot spacing all together

--- a/src/components/chatbot/chatbot.styles.css
+++ b/src/components/chatbot/chatbot.styles.css
@@ -1,10 +1,10 @@
 .react-chatbot-kit-chat-container {
   border-radius: 10px;
-  height: 600px;
+  height: 500px;
   background: #fff;
   position: fixed;
-  left: 882px;
-  top: 70px;
+  right: 110px;
+  bottom: 50px;
   z-index: 10;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
@@ -13,7 +13,6 @@
 }
 
 .react-chatbot-kit-chat-message-container {
-  height: 525px;
 }
 .react-chatbot-kit-chat-bot-message {
   background: linear-gradient(-45deg, #0d87b5, #52429a);
